WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82280
IndexedDB: don't expose IDBDatabaseError to script
https://bugs.webkit.org/show_bug.cgi?id=82280
Summary
IndexedDB: don't expose IDBDatabaseError to script
David Grogan
Reported
2012-03-26 18:13:26 PDT
IndexedDB: don't expose IDBDatabaseError to script
Attachments
Patch
(7.21 KB, patch)
2012-03-26 18:17 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch
(15.17 KB, patch)
2012-03-27 09:00 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch
(151.07 KB, patch)
2012-03-27 09:44 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch
(155.89 KB, patch)
2012-03-27 14:15 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch
(155.45 KB, patch)
2012-03-27 15:41 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch
(155.45 KB, patch)
2012-03-27 15:46 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch
(135.35 KB, patch)
2012-03-28 16:56 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Patch
(134.99 KB, patch)
2012-03-28 17:02 PDT
,
David Grogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
David Grogan
Comment 1
2012-03-26 18:17:03 PDT
Created
attachment 133953
[details]
Patch
David Grogan
Comment 2
2012-03-26 18:18:30 PDT
Josh, this will need rebaselining of our expected files, but do you know any reason why we can't remove this?
Early Warning System Bot
Comment 3
2012-03-26 18:51:46 PDT
Comment on
attachment 133953
[details]
Patch
Attachment 133953
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/12141259
Early Warning System Bot
Comment 4
2012-03-26 18:56:53 PDT
Comment on
attachment 133953
[details]
Patch
Attachment 133953
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/12103038
Build Bot
Comment 5
2012-03-26 19:44:46 PDT
Comment on
attachment 133953
[details]
Patch
Attachment 133953
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/12147227
Joshua Bell
Comment 6
2012-03-26 20:44:26 PDT
(In reply to
comment #2
)
> Josh, this will need rebaselining of our expected files, but do you know any reason why we can't remove this?
We can remove it. (IDBDatabaseException will be going away too as part of a move to DOM4-style exceptions, but not all of the other browsers have done that yet either.)
David Grogan
Comment 7
2012-03-27 09:00:51 PDT
Created
attachment 134080
[details]
Patch
WebKit Review Bot
Comment 8
2012-03-27 09:05:29 PDT
Attachment 134080
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/stor..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Grogan
Comment 9
2012-03-27 09:44:26 PDT
Created
attachment 134085
[details]
Patch
Build Bot
Comment 10
2012-03-27 10:13:25 PDT
Comment on
attachment 134085
[details]
Patch
Attachment 134085
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/12148520
David Grogan
Comment 11
2012-03-27 14:15:58 PDT
Created
attachment 134136
[details]
Patch
David Grogan
Comment 12
2012-03-27 15:13:19 PDT
Josh, do you want to take a look before I ask Tony to review this?
Joshua Bell
Comment 13
2012-03-27 15:32:00 PDT
Comment on
attachment 134136
[details]
Patch lgtm View in context:
https://bugs.webkit.org/attachment.cgi?id=134136&action=review
> Source/WebCore/GNUmakefile.list.am:-1059 > - Source/WebCore/Modules/indexeddb/IDBDatabaseError.h \
If we need to update more than gyp and xcode project files then I may be guilty of letting these get out of sync. :(
David Grogan
Comment 14
2012-03-27 15:41:04 PDT
Created
attachment 134150
[details]
Patch
David Grogan
Comment 15
2012-03-27 15:46:07 PDT
Created
attachment 134151
[details]
Patch
David Grogan
Comment 16
2012-03-27 15:50:32 PDT
Tony, could you review this?
Tony Chang
Comment 17
2012-03-27 15:59:16 PDT
Comment on
attachment 134151
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=134151&action=review
> Source/WebCore/ChangeLog:10 > + No new tests - this was an untested feature.
Nit: This isn't entirely true. The existence of IDBDatabaseError was tested in the existing tests and now it's going away. If you wanted, you could check in a single test that IDBDatabaseError is undefined.
David Grogan
Comment 18
2012-03-28 16:56:41 PDT
Created
attachment 134447
[details]
Patch
David Grogan
Comment 19
2012-03-28 17:02:02 PDT
Created
attachment 134449
[details]
Patch
David Grogan
Comment 20
2012-03-28 17:09:07 PDT
(In reply to
comment #17
)
> (From update of
attachment 134151
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=134151&action=review
> > > Source/WebCore/ChangeLog:10 > > + No new tests - this was an untested feature. > > Nit: This isn't entirely true. The existence of IDBDatabaseError was tested in the existing tests and now it's going away.
Good point.
> If you wanted, you could check in a single test that IDBDatabaseError is undefined.
I added this in removed.html.
WebKit Review Bot
Comment 21
2012-03-28 18:46:28 PDT
Comment on
attachment 134449
[details]
Patch Clearing flags on attachment: 134449 Committed
r112490
: <
http://trac.webkit.org/changeset/112490
>
WebKit Review Bot
Comment 22
2012-03-28 18:46:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug