IndexedDB: don't expose IDBDatabaseError to script https://bugs.webkit.org/show_bug.cgi?id=82280

Source/WebCore:

It's not used anywhere and firefox doesn't expose it.

Reviewed by Tony Chang.

Test: storage/indexeddb/removed.html

* CMakeLists.txt:
* DerivedSources.cpp:
* DerivedSources.make:
* DerivedSources.pri:
* GNUmakefile.list.am:
* Modules/indexeddb/DOMWindowIndexedDatabase.idl:
* Modules/indexeddb/IDBDatabaseError.idl: Removed.
* Modules/indexeddb/WorkerContextIndexedDatabase.idl:
* WebCore.gypi:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:

LayoutTests:

Add layout test that ensures IDBDatabaseError is gone.

Also change shouldBeTrue to shouldBeTrueQuiet in the boilerplate idb
layout test preamble to remove a bunch of clutter from the
-expected.txt files.

Reviewed by Tony Chang.

* storage/indexeddb/basics-expected.txt:
* storage/indexeddb/basics-shared-workers-expected.txt:
* storage/indexeddb/basics-workers-expected.txt:
... every indexeddb -expected.txt:
Remove output from check for IDBDatabaseError.
* storage/indexeddb/removed-expected.txt: Added.
* storage/indexeddb/removed.html: Added.
* storage/indexeddb/request-event-propagation-expected.txt:
* storage/indexeddb/resources/removed.js: Added.
(test):
* storage/indexeddb/resources/shared.js:
(removeVendorPrefixes): Stop checking for existence of
window.IDBDatabaseError.


Canonical link: https://commits.webkit.org/99898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112490 268f45cc-cd09-0410-ab3c-d52691b4dbfc